--- a/MultiLanguageSample/MainWindow.xaml
+++ b/MultiLanguageSample/MainWindow.xaml
@@ -1,12 +1,31 @@
 ﻿<Window x:Class="MultiLanguageSample.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MultiLanguageSample"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:local="clr-namespace:MultiLanguageSample"
+	mc:Ignorable="d"
+	Title="MultiLanguageSample" Height="150" Width="250">
+	<Grid Margin="5,5,5,5">
+		<Grid.RowDefinitions>
+			<RowDefinition/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
+		<Grid Grid.Row="0">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="auto"/>
+				<ColumnDefinition/>
+			</Grid.ColumnDefinitions>
+			<TextBlock Grid.Column="0" Text="言語を選択：" FontSize="18"
+					HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5,5,5,5"/>
+			<ComboBox Grid.Column="1" SelectedIndex="0" Width="80" Height="24"
+					HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,5,5,5">
+				<ComboBoxItem Content="日本語"/>
+				<ComboBoxItem Content="英語"/>
+				<ComboBoxItem Content="中国語"/>
+			</ComboBox>
+		</Grid>
+		<TextBlock Grid.Row="1" Text="こんにちは、世界！" FontSize="24"
+				HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,5,5,5"/>
+	</Grid>
 </Window>
