--- a/MultiLanguageSample/MainWindow.xaml
+++ b/MultiLanguageSample/MainWindow.xaml
@@ -4,6 +4,7 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:local="clr-namespace:MultiLanguageSample"
+	xmlns:properties="clr-namespace:MultiLanguageSample.Properties"
 	mc:Ignorable="d"
 	Title="MultiLanguageSample" Height="150" Width="250">
 	<Grid Margin="5,5,5,5">
@@ -16,7 +17,7 @@
 				<ColumnDefinition Width="auto"/>
 				<ColumnDefinition/>
 			</Grid.ColumnDefinitions>
-			<TextBlock Grid.Column="0" Text="言語を選択：" FontSize="18"
+			<TextBlock Grid.Column="0" Text="{x:Static properties:Resources.SelectLanguage}" FontSize="18"
 					HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5,5,5,5"/>
 			<ComboBox Grid.Column="1" SelectedIndex="0" Width="80" Height="24"
 					HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,5,5,5">
@@ -25,7 +26,7 @@
 				<ComboBoxItem Content="中国語"/>
 			</ComboBox>
 		</Grid>
-		<TextBlock Grid.Row="1" Text="こんにちは、世界！" FontSize="24"
+		<TextBlock Grid.Row="1" Text="{x:Static properties:Resources.HelloWorld}" FontSize="24"
 				HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,5,5,5"/>
 	</Grid>
 </Window>
