--- a/MultiLanguageSample/MainWindow.xaml
+++ b/MultiLanguageSample/MainWindow.xaml
@@ -6,7 +6,7 @@
 	xmlns:local="clr-namespace:MultiLanguageSample"
 	xmlns:properties="clr-namespace:MultiLanguageSample.Properties"
 	mc:Ignorable="d"
-	Title="MultiLanguageSample" Height="150" Width="250">
+	Title="MultiLanguageSample" Height="150" Width="300">
 	<Grid Margin="5,5,5,5">
 		<Grid.RowDefinitions>
 			<RowDefinition/>
@@ -14,19 +14,20 @@
 		</Grid.RowDefinitions>
 		<Grid Grid.Row="0">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="auto"/>
 				<ColumnDefinition/>
+				<ColumnDefinition Width="auto"/>
 			</Grid.ColumnDefinitions>
-			<TextBlock Grid.Column="0" Text="{x:Static properties:Resources.SelectLanguage}" FontSize="18"
-					HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5,5,5,5"/>
-			<ComboBox Grid.Column="1" SelectedIndex="0" Width="80" Height="24"
-					HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,5,5,5">
+			<TextBlock Grid.Column="0" FontSize="18" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5,5,5,5"
+				Text="{Binding Source={x:Static local:ResourceService.Current}, Path=Resources.SelectLanguage, Mode=OneWay}"/>
+			<ComboBox Grid.Column="1" SelectedIndex="{Binding LanguageIndex, UpdateSourceTrigger=PropertyChanged}" Width="80" Height="24"
+					HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,5,5,5"
+					SelectionChanged="ComboBox_SelectionChanged">
 				<ComboBoxItem Content="日本語"/>
-				<ComboBoxItem Content="英語"/>
-				<ComboBoxItem Content="中国語"/>
+				<ComboBoxItem Content="English"/>
+				<ComboBoxItem Content="中文"/>
 			</ComboBox>
 		</Grid>
-		<TextBlock Grid.Row="1" Text="{x:Static properties:Resources.HelloWorld}" FontSize="24"
-				HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,5,5,5"/>
+		<TextBlock Grid.Row="1" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,5,5,5"
+			Text="{Binding Source={x:Static local:ResourceService.Current}, Path=Resources.HelloWorld, Mode=OneWay}"/>
 	</Grid>
 </Window>
